compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@global_struct_expansion_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/global_struct_expansion_success.tapir
---
Script(
  struct_declarations: [
    StructDeclaration(
      doc_comment: None,
      name: TypeWithLocation(
        t: None,
        name: "Point",
        span: "[span]",
      ),
      fields: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "x",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "y",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
      ],
      span: "[span]",
    ),
  ],
  property_declarations: [],
  globals: [
    GlobalDeclaration(
      doc_comment: None,
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "origin",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Struct(StructId(0))),
          name: "Point",
          span: "[span]",
        )),
      ),
      value: None,
      span: "[span]",
    ),
    GlobalDeclaration(
      doc_comment: None,
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "offset",
        ),
        ty: None,
      ),
      value: Some(Expression(
        span: "[span]",
        kind: Call(
          name: "int2",
          arguments: [
            Expression(
              span: "[span]",
              kind: Integer(10),
              meta: {},
            ),
            Expression(
              span: "[span]",
              kind: Integer(20),
              meta: {},
            ),
          ],
        ),
        meta: {},
      )),
      span: "[span]",
    ),
  ],
  functions: [
    Function(
      doc_comment: None,
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "a",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("origin"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "x",
                      ),
                    ),
                    meta: {},
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("offset"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(4611686018427387907)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "x",
                      ),
                    ),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "b",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("origin"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "y",
                      ),
                    ),
                    meta: {},
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("offset"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(4611686018427387907)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "y",
                      ),
                    ),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
