compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@global_uninitialized_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/global_uninitialized_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [
    GlobalDeclaration(
      doc_comment: None,
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "counter",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Int),
          name: "int",
          span: "[span]",
        )),
      ),
      value: None,
      span: "[span]",
    ),
    GlobalDeclaration(
      doc_comment: None,
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "result",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Fix),
          name: "fix",
          span: "[span]",
        )),
      ),
      value: None,
      span: "[span]",
    ),
    GlobalDeclaration(
      doc_comment: None,
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "flag",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Bool),
          name: "bool",
          span: "[span]",
        )),
      ),
      value: None,
      span: "[span]",
    ),
  ],
  functions: [
    Function(
      doc_comment: None,
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
    Function(
      doc_comment: None,
      kind: Regular,
      name: "main",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("counter"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                },
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(5),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4611686018427387904)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("result"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(4611686018427387905)",
                },
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4611686018427387905)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("flag"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(4611686018427387906)",
                },
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Bool(true),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4611686018427387906)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(1)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
