compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@globals_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/globals_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [
    GlobalDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "counter",
        ),
        ty: None,
      ),
      value: Some(Expression(
        span: "[span]",
        kind: Integer(0),
        meta: {},
      )),
      span: "[span]",
    ),
    GlobalDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "max_value",
        ),
        ty: None,
      ),
      value: Some(Expression(
        span: "[span]",
        kind: Integer(100),
        meta: {},
      )),
      span: "[span]",
    ),
  ],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Variable("counter"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              Expression(
                span: "[span]",
                kind: Variable("counter"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                },
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Variable("x"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(0)",
                    },
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Integer(1),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4611686018427387904)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: If(
            condition: Expression(
              span: "[span]",
              kind: BinaryOperation(
                lhs: Expression(
                  span: "[span]",
                  kind: Variable("counter"),
                  meta: {
                    "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                  },
                ),
                operator: Gt,
                rhs: Expression(
                  span: "[span]",
                  kind: Variable("max_value"),
                  meta: {
                    "compiler::ast::SymbolId": "SymbolId(4611686018427387905)",
                  },
                ),
              ),
              meta: {},
            ),
            true_block: [
              Statement(
                span: "[span]",
                kind: Assignment(
                  targets: [
                    Expression(
                      span: "[span]",
                      kind: Variable("counter"),
                      meta: {
                        "compiler::ast::SymbolId": "SymbolId(4611686018427387904)",
                      },
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Integer(0),
                      meta: {},
                    ),
                  ],
                ),
                meta: {
                  "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4611686018427387904)]",
                },
              ),
            ],
            false_block: [],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
