compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@if_blocks_success.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/if_blocks_success.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              Ident(
                span: "[span]",
                ident: "x",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              Ident(
                span: "[span]",
                ident: "y",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(14),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: If(
            condition: Expression(
              span: "[span]",
              kind: Bool(true),
              meta: {},
            ),
            true_block: [
              Statement(
                span: "[span]",
                kind: VariableDeclaration(
                  idents: [
                    Ident(
                      span: "[span]",
                      ident: "x",
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Fix,
                      meta: {},
                    ),
                  ],
                ),
                meta: {
                  "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(3)]",
                },
              ),
              Statement(
                span: "[span]",
                kind: Assignment(
                  idents: [
                    Ident(
                      span: "[span]",
                      ident: "y",
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Integer(112),
                      meta: {},
                    ),
                  ],
                ),
                meta: {
                  "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2)]",
                },
              ),
            ],
            false_block: [
              Statement(
                span: "[span]",
                kind: VariableDeclaration(
                  idents: [
                    Ident(
                      span: "[span]",
                      ident: "z",
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Integer(82),
                      meta: {},
                    ),
                  ],
                ),
                meta: {
                  "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4)]",
                },
              ),
              Statement(
                span: "[span]",
                kind: Assignment(
                  idents: [
                    Ident(
                      span: "[span]",
                      ident: "y",
                    ),
                  ],
                  values: [
                    Expression(
                      span: "[span]",
                      kind: Variable("z"),
                      meta: {
                        "compiler::ast::SymbolId": "SymbolId(4)",
                      },
                    ),
                  ],
                ),
                meta: {
                  "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2)]",
                },
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "x",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(12),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
      },
    ),
  ],
  extern_functions: [],
)
